samples/_failures_safe/1761316883_23ebd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d58d465.c: In function ‘main’:
./samples/SAFE/__tmp_6d58d465.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
